[ADD] Added alertSystem creation
