# src/swagger.yaml
@@ -338,7 +338,7 @@ paths:
   /user/{id}:
     patch:
       tags:
-        - teacher
+        - user
       summary: Update an user
       description: >
         Update a user given a valid email, firstname, lastname, role, classes. <br> <br>
@@ -479,55 +479,6 @@ paths:
                 $ref: '#/components/schemas/internalServerError'
       security:
         - x-auth-token: [ ]
-  /user/:id:
-    patch:
-      tags:
-        - teacher
-      summary: Update an user
-      description: >
-        Update a user given a valid email, firstname, lastname, role, classes. <br> <br>
-        If the role is student, only one element in the classes array is accepted. <br> <br>
-        If the role is teacher, multiple elements in the classes array is accepted. <br> <br>
-        If other role, no element should be in the classes array. <br> <br>
-        If the connected user is a teacher, all fields except roles and classes will be updated. <br> <br>
-        If other role, all fields will be updated.
-      parameters:
-        - in: path
-          name: id
-          schema:
-            type: string
-          required: true
-          description: >
-            Id of the user that will be updated
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Profile'
-      responses:
-        '200':
-          description: Successful operation
-        '400':
-          description: Invalid request
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/invalidRequest'
-        '422':
-          description: User not found
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/UserNotFound'
-        '500':
-          description: Internal Server Error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/internalServerError'
-      security:
-        - x-auth-token: [ ]
   /user/chat/{id}/newFile:
     post:
       tags:
@@ -575,7 +526,7 @@ paths:
   /adm/register:
     post:
       tags:
-        - admin
+        - adm
       summary: Register a user
       description: >
         Register a user given a valid email, firstname, lastname, role, classes. <br> <br>
@@ -787,10 +738,10 @@ paths:
                 $ref: '#/components/schemas/internalServerError'
       security:
         - x-auth-token: []
-  /adm/facility/register:
+  /admin/facility/register:
     post:
       tags:
-        - adm
+        - admin
       summary: Register a facility
       description: >
         Register a Facility, given a non empty name, a non empty address, a non empty telephone and a valid level.
@@ -1138,9 +1089,129 @@ paths:
                 $ref: '#/components/schemas/internalServerError'
       security:
         - x-auth-token: [ ]
+  /shared/alert/:
+    post:
+      tags:
+        - shared
+      summary: Create new alert
+      description: >
+        Create a new alert. Send a list of classes or a role for the alert, but not both
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/newAlert'
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/alertAnswer'
+        '400':
+          description: Invalid request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/invalidRequest'
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/internalServerError'
+      security:
+        - x-auth-token: [ ]
+  /shared/alert/file/{id}:
+    post:
+      tags:
+        - shared
+      summary: Add file alert
+      description: >
+        Add a file to the alert.
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: string
+          required: true
+          description: >
+            The id of the alert
+      requestBody:
+        required: true
+        content:
+          multipart/form-data:
+            schema:
+              $ref: '#/components/schemas/newFile'
+      responses:
+        '200':
+          description: Successful operation
+        '400':
+          description: Invalid request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/invalidRequest'
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/internalServerError'
+      security:
+        - x-auth-token: [ ]
 
 components:
   schemas:
+    newAlert:
+      type: object
+      properties:
+        title:
+          type: string
+          example: 'Test Answer'
+        message:
+          type: string
+          example: 'Test Answer message'
+        role:
+          type: string
+          example: "64692acf1874cb0532aa619d"
+        classes:
+          type: string
+          example: ["64692acf1874cb0532aa619d", "64692acf1874cb0532aa619d"]
+    alertAnswer:
+      type: object
+      properties:
+        title:
+          type: string
+          example: 'Test Answer'
+        message:
+          type: string
+          example: 'Test Answer message'
+        file:
+          type: string
+          example: "64692acf1874cb0532aa619d"
+        forClasses:
+          type: boolean
+          example: true
+        classes:
+          type: string
+          example: []
+        role:
+          type: string
+          example: "64692acf1874cb0532aa619d"
+        createdAt:
+          type: string
+          example: '2023-11-05T10:35:31.784Z'
+        createdBy:
+          type: string
+          example: '64692acf1874cb0532aa619d'
+        facility:
+          type: string
+          example: '64692acf1874cb0532aa619d'
+        _id:
+          type: string
+          example: '64692acf1874cb0532aa619d'
     UserLogin:
       type: object
       properties:
